2007-03-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-ems.el (w3m-tab-unselected-face)
	(w3m-tab-unselected-retrieving-face, w3m-tab-selected-face)
	(w3m-tab-selected-retrieving-face, w3m-tab-mouse-face): Make
	background colors bright.
	(w3m-tab-mouse-position-adjuster): New variable.
	(w3m-tab-mouse-track-selected-tab, w3m-tab-next-buffer)
	(w3m-tab-previous-buffer, w3m-tab-move-right, w3m-tab-move-left):
	New functions.
	(w3m-tab-map): Bind C-wheel-up and C-mouse-4 to w3m-tab-move-left;
	bind C-wheel-down and C-mouse-5 to w3m-tab-move-right; use
	w3m-tab-previous-buffer and w3m-tab-next-buffer instead of
	w3m-previous-buffer and w3m-next-buffer.
	(w3m-tab-separator): Add tab-separator property.

	* w3m.el (w3m-next-buffer): Fix calculation.
	(w3m-lynx-like-map, w3m-info-like-map): Bind `C-c C-,' and `C-c
	C-<' to w3m-tab-move-left, and bind `C-c C-.' and `C-c C->' to
	w3m-tab-move-right for GNU Emacs.

2007-03-27  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-add-tab-number): New user option.

	* w3m-ems.el (top): Add w3m-add-tab-number to avoid byte-compile
	warnings.
	(w3m-tab-line): Display sequential number on tab title when
	w3m-add-tab-number is not nil.

	* w3m.el (w3m-menubar): Add w3m-session-save and
	w3m-session-select.
	(w3m-tab-button-menu-commands): Ditto.

2007-03-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-ems.el: New file merging w3m-e21.el, w3m-e23.el and w3m-fsf.el.
	(image-size): No need to silence the byte compiler.
	(w3m-ccl-get-ucs-codepoint-with-emacs-unicode): Remove.
	(w3m-euc-japan-encoder, w3m-euc-japan-encoder)
	(w3m-iso-latin-1-encoder, w3m-iso-latin-1-encoder): Redefine them
	only for Emacs 22 and earlier.

	* w3m-e21.el, w3m-e23.el, w3m-fsf.el: Remove.

	* w3m.el: Load w3m-ems.el instead of w3m-e21.el or w3m-e23.el.
	(w3m-fontify-strike-through): Remove variable.

	* w3mhack.el (w3mhack-mdelete): Remove.
	(w3mhack-module-list): Use w3m-ems.el instead of w3m-fsf.el and
	w3m-e21.el or w3m-e23.el.
